# data-tools

./: .gitignore  1_downloader.py  2_extract_audio.py  2_extract_screenshots.py  3_transcriber.py  README.md  app.py  crawler.ipynb  image-pipeline.ipynb  image-pipeline.py  metabo.html  pipeline-debug.py  pipeline.py  poetry_scripts.py  pyproject.toml  requirements.txt  sandbox.ipynb  single.py  visited_urls.csv
data_tools/: 1_downloader.py  ai.py  app.py  endpoints.py  german_voice.py  main.py  utils.py
tests/: test_pipeline.py  test_utils.py
